[package]
name = "zprize"
version = "0.1.0"
edition = "2021"

[dependencies]
snarkvm-algorithms = { path = "../../snarkVM/algorithms" }
snarkvm-circuit = {  path = "../../snarkVM/circuit" }
snarkvm-console = { path = "../../snarkVM/console", features = [
    "types",
] }
snarkvm-curves = { path = "../../snarkVM/curves" }
snarkvm-circuit-environment = { path = "../../snarkVM/circuit/environment" }
snarkvm-console-network = { path = "../../snarkVM/console/network" }
snarkvm-utilities = { path = "../../snarkVM/utilities" }

rand = "0.8.5"
k256 = { version = "0.13", features = ["ecdsa"] }
ecdsa = { version = "0.16", features = ["signing", "verifying"] }
sha3 = "0.10"
num-bigint = { version = "0.4", features = ["rand"] }
num-integer = {version = "0.1"}
log = "0.4"
rayon = "1.8"
rust-crypto = "^0.2"
memory-stats = "1.0.0"

crossbeam = "0.8.4"

[dependencies.lazy_static]
version = "1.4"

[dev-dependencies]
criterion = { version = "0.4", features = ["html_reports"] }
env_logger = "0.10.0"

[[bench]]
name = "bench"
harness = false

[target.'cfg(not(target_env = "msvc"))'.dependencies]
tikv-jemallocator = { version = "0.5.4", features = ["profiling", "unprefixed_malloc_on_supported_platforms"] }
